# clothoidlib

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.github/workflows/: python-app.yml
clothoidlib/: __init__.py  calculator.py  draw_clothoids.py  utils.py
tests/clothoidlib/: test_calculator.py  test_utils.py
