[tool.poetry]
name = "clothoidlib"
version = "0.1.0"
description = "A lightweight Python library to calculate clothoid parameters."
authors = ["Georg Wölflein <georgw7777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
scipy = "^1.5.3"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
