[tool.poetry]
name = "clothoidlib"
version = "0.1.0"
description = "A lightweight Python library to calculate clothoid parameters."
authors = ["Georg Wölflein <georgw7777@gmail.com>"]
repository = "http://github.com/georgw777/clothoidlib"
packages = [
    { include = "clothoidlib" },
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.2"
scipy = "^1.5.3"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
autopep8 = "^1.5.4"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
